[tool.poetry]
name = "partymarty-api"
version = "0.1.0"
description = ""
authors = ["leonhard.hennicke <leonhard.hennicke@student.hpi.de>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask_sqlalchemy = "^2.4.1"
flask_migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
